Untitled Folder/admin1/workspace/New Project/src/objects/Fundraiser__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <label>Attendee Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Fundraiser</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Events</fullName>
        <columns>NAME</columns>
        <columns>Attendee_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Title__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Company__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Event_Name__c</field>
            <operation>equals</operation>
            <value>Sales Event</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Funds</value>
        </filters>
        <label>Events</label>
    </listViews>
    <nameField>
        <label>Fundraiser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fundraisers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>